# dips

./: .gitignore  README.md  analyze_tag_distribution.py  cangjie_bpe.py  cc100_pos_perceptron_network_depth_2_window_5_learnable_teacher_forcing_1.pth  cc100_pos_perceptron_window_5_learnable_teacher_forcing_1.pth  conv_mlm.py  crf.py  dict_segmenter.py  errors.jsonl  eval.py  eval_ckip.py  eval_conv_multi.py  eval_deepseek.py  eval_hanlp.py  eval_pycantonese.py  eval_segmentation.py  eval_segmentation_multi.py  filter.py  fine_tune.ipynb  gen.py  gen_multi_seg_dataset.py  gen_sentence_datasets.py  graph_tagger.py  hanlp_gen_seg_dataset.py  hkcancor_pos_perceptron_network_depth_2_window_5_learnable_teacher_forcing_1.pth  hkcancor_pos_perceptron_window_5_learnable.pth  inspect_datasets.py  multi_model_results.json  perceptron_tagger.py  plot_segmentation_multi_results.py  pos_tagger_cc100_embedding_dim_40_network_depth_2_window_5_learnable_teacher_forcing_2.pth  pos_tagger_cc100_lihkg_embedding_dim_40_network_depth_2_window_5_learnable_teacher_forcing_2.pth  pos_tagger_cc100_lihkg_network_depth_2_window_5_learnable_teacher_forcing_2.pth  pos_tagger_cc100_network_depth_2_window_5_learnable_teacher_forcing_2.pth  pos_tagger_cc100_network_depth_3_window_5_learnable_teacher_forcing_2.pth  pos_tagger_cc100_seg_network_depth_2_window_5_learnable_teacher_forcing_2.pth  pos_tagger_cc100_window_5_learnable.pth  pos_tagger_cc100_window_size_7_embedding_dim_40_network_depth_2_window_7_learnable_teacher_forcing_2.pth  pos_tagger_hkcancor_network_depth_2_window_5_learnable_teacher_forcing_2.pth  (+24 more)
TreebankPreprocessing/: upload_ctb8_to_hub.py
TreebankPreprocessing/ctb_outputs/: dev.tsv  test.tsv
bert.cpp/: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml  requirements.txt
bert.cpp/bert_cpp/: __init__.py  api.py  bench.py  convert.py  model.py  test.py  utils.py
bert.cpp/src/: CMakeLists.txt  bert.cpp  bert.h  index.html  main.cpp  quantize.cpp  wasm.cpp
bert.cpp/tests/: conftest.py  test_strings.txt  test_tokenizer.py
cc100_yue_outputs_v1/: pos_errors.jsonl  pos_results.jsonl
data/: Cangjie5_SC.txt  Cangjie5_SC_BPE.txt  ctb8_as_vocab.txt  ctb8_vocab.txt  prompt_v2_zh.txt  segmentation_tests.txt
data/sighan2005/: as_test_gold.utf8  cityu_test_gold.utf8
finetune-ckip-transformers/: .gitignore  compress_model.py  finetune_hkcancor.py  finetune_hkcancor_multi.py  finetune_multi.py  truncate_vocab.py
finetune-ckip-transformers/data/: finetune_hkcancor.json  finetune_hkcancor_multi.json  finetune_hkcancor_multi_dual.json
genius_zh_cn_outputs_v2/: pos_errors.jsonl
lihkg_outputs_v2/: pos_errors.jsonl
multi-tiered-cantonese-word-segmentation/: gen_multi_seg_dataset.py  gen_seg_dataset.py
scratch-inference/: hf_model.py  np_model.py
scratch_inference/: Cargo.toml  np_model.py
segmentation_datasets/: distil_dataset.py  gen_dataset.py
tract-inference/: Cargo.toml  export.py
tract-inference/src/: main.rs
tract_inference/: Cargo.toml
tract_inference/model/: tokenizer.json  tokenizer_config.json  vocab.txt
ud_yue_outputs_v2/: pos_errors.jsonl  pos_results.jsonl
ud_yue_outputs_v2_presegmented/: pos_errors.jsonl  pos_results.jsonl
ud_zh_outputs_v2/: pos_errors.jsonl  pos_results.jsonl
wiki_yue_long_outputs_v2/: pos_errors.jsonl
